classDiagram
    direction TB

    class Events {
        +ReservasiDibuat
        +ReservasiDibayar
        +ReservasiDikonfirmasi
        +TagihanDibuat
        +PembayaranBerhasil
        +PembayaranCashDikonfirmasi
        +ReminderPenyewa
        +NotifikasiWali
        +DendaDikenakan
        +KeluhanDibuat
        +KeluhanDitanggapi
    }

    class Listeners {
        +HandleReservasiDibuat
        +HandleReservasiDibayar
        +HandleReservasiDikonfirmasi
        +ProsesTransisiPenyewa
        +HandleTagihanDibuat
        +HandleReminderPenyewa
        +HandleNotifikasiWali
        +HandleDendaDikenakan
        +KirimEmailPembayaranCashListener
        +KirimNotifikasiKeluhanDibuat
        +KirimNotifikasiKeluhanDitanggapi
        +NotifikasiKhususSubscriber
    }

    class BackgroundJobs {
        +KirimNotifikasiAdminReservasiJob
        +KirimNotifikasiUserReservasiJob
        +KirimNotifikasiTagihanJob
        +KirimNotifikasiPembayaranJob
        +KirimReminderJatuhTempoJob
        +KirimNotifikasiWaliJob
        +KirimWelcomeMessageJob
        +KirimNotifikasiKustomJob
    }

    class ExternalGateways {
        +FonnteWhatsAppGateway
        +MidtransPaymentGateway
        +BrowserReceiptHtml2Pdf
    }

    Events ..> Listeners : Triggers via Event Bus
    Listeners ..> BackgroundJobs : Dispatches to Queue
    BackgroundJobs ..> ExternalGateways : Executes Async Request
    HandleTagihanDibuat ..> KirimNotifikasiTagihanJob : Dispatches
    KirimEmailPembayaranCashListener ..> KirimNotifikasiPembayaranJob : Dispatches
    HandleReservasiDibuat ..> KirimNotifikasiAdminReservasiJob : Dispatches
    HandleReservasiDibayar ..> KirimNotifikasiUserReservasiJob : Dispatches
    HandleReminderPenyewa ..> KirimReminderJatuhTempoJob : Dispatches
    HandleNotifikasiWali ..> KirimNotifikasiWaliJob : Dispatches
    HandleDendaDikenakan ..> KirimReminderJatuhTempoJob : Dispatches
